@@ -5,6 +5,7 @@
 # Required-Stop:     $local_fs $remote_fs $network $syslog
 # Default-Start:     2 3 4 5
 # Default-Stop:      0 1 6
+# Short-Description: Start/stop apache2 web server
 ### END INIT INFO
 #
 # apache2		This init.d script is used to start apache2.
