@@ -22,4 +22,6 @@ case "$1" in
         ;;
 esac
 
+#DEBHELPER#
+
 exit 0
