@@ -94,6 +94,7 @@ clean: unpatch
 	rm -rf $(BUILD) mpm-worker mpm-prefork mpm-event install 
 	rm -f debian/apache2-mpm-worker.postinst debian/apache2-mpm-worker.preinst debian/apache2-mpm-worker.prerm
 	rm -f debian/apache2-mpm-event.postinst debian/apache2-mpm-event.preinst debian/apache2-mpm-event.prerm
+	rm -f debian/apache2-mpm-prefork.prerm
 
 build: patch-stamp build-mpms 
 build-mpms: mpm-worker mpm-prefork mpm-event
@@ -233,7 +234,7 @@ install: build install-worker install-prefork install-common install-dev install
 			dh_strip -papache2-mpm-$$i ;\
 			objcopy --add-gnu-debuglink=debian/apache2-dbg/usr/lib/debug/usr/sbin/apache2-mpm-$$i debian/apache2-mpm-$$i/usr/sbin/apache2 ;\
 		fi ;\
-		install -m644 debian/mpms.lintian-overrides debian/apache2-mpm-$$i/usr/share/lintian/overrides/apache2-mpm-$$i ;\
+		perl -p -e "s/^/apache2-mpm-$$i: /" < debian/mpms.lintian-overrides > debian/apache2-mpm-$$i/usr/share/lintian/overrides/apache2-mpm-$$i ;\
 	done
 
 	for pkg in `awk '/^Package:/ { print $$2 }' debian/control`; do \
@@ -267,7 +268,7 @@ binary-arch: install
 	dh_installchangelogs -a CHANGES
 	rm -f debian/apache2-dbg/usr/share/doc/apache2-dbg/changelog
 	rm -f debian/apache2-dbg/usr/share/doc/apache2-dbg/NEWS.Debian
-	dh_installinit -a -r --name=apache2 -- start 91 09
+	dh_installinit -a --no-start -r --name=apache2 -- defaults 91 09
 	dh_installcron -a -r --name=apache2
 	if [ "$(LSB_RELEASE)" = "Ubuntu" ]; then \
 		dh_strip -a; \
